--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     /* border: 1px solid black; */
     margin: 10px;
 }
+
+.booking-number {
+    position:absolute;
+    background-color: rgba(255, 255, 255, 0.7); 
+    padding: 2px;
+    font-weight: bold;
+    font-size: 12px;
+}
 .property-image {
     flex: 1;
     padding-right: 20px;
